--- a/src/app/feature/factura/components/factura/factura.component.html
+++ b/src/app/feature/factura/components/factura/factura.component.html
@@ -24,7 +24,7 @@
                 <td data-label="Fecha Inicio">{{factura.fechaInicio}}</td>
                 <td data-label="Fecha Fin">{{factura.fechaFin}}</td>
                 <td data-label="Valor">{{factura.valor}}</td>
-                <td data-label="Placa">{{factura.vehiculo != null ? factura.vehiculo.placa : factura.placa}}</td>
+                <td data-label="Placa">{{factura.tipoModalidad != 'HORA' && factura.tipoModalidad != 'DIA' ? factura.vehiculo.placa : factura.placa}}</td>
                 <td data-label="Estado">{{factura.estadoFactura}}</td>
                 <td>
                     <button class="btn btn-warning" *ngIf="factura?.estadoFactura != 'ANULADA'" routerLink="/factura/editar/{{factura.id}}">
