componente de propietario

--- a/src/app/feature/factura/components/crear-factura/crear-factura.component.html
+++ b/src/app/feature/factura/components/crear-factura/crear-factura.component.html
@@ -44,7 +44,7 @@
             </button>
         </div>
 
-        <button class="boton_cerrar btn btn-light" id="linkListarPropietarios" routerLink="/factura">
+        <button class="boton_cerrar btn btn-light" id="linkListarFacturas" routerLink="/factura">
             <i class="bi bi-x-circle"></i>
         </button>
     </div>
