--- a/src/app/feature/propietario/components/crear-propietario/crear-propietario.component.css
+++ b/src/app/feature/propietario/components/crear-propietario/crear-propietario.component.css
@@ -1,24 +1,37 @@
-.flex-container{
+.flex-container-form{
+    margin-left: 40px;
+    width: 30%;
     display: flex;
     background-color: #fff;
     border: 1px solid #ddd;
+    padding-bottom: 20px;
 }
+
+@media 
+only screen and 
+    (max-width: 760px){
+        .flex-container-form{
+            width: auto;
+            display: flex;
+            background-color: #fff;
+            border: 1px solid #ddd;
+        }
+    }
 
 .boton_cerrar{
     margin-right: 1%;
     margin-left: auto;
-    margin-top: 10px;
-    height: 20px;
+    margin-top: 5px;
+    height: 35px;
+}
+
+.button_guardar_propietario{
+    margin-left: 10px;
+    margin-top: 20px;
 }
 
 .form{
+    margin-left: 20px;
     margin-top: 20px;
     float: left;
-}
-
-select {
-    padding: 8px 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: #f1f1f1;
 }
