--- a/src/app/feature/propietario/components/crear-propietario/crear-propietario.component.html
+++ b/src/app/feature/propietario/components/crear-propietario/crear-propietario.component.html
@@ -1,4 +1,4 @@
-<form>
+<form [formGroup]="propietarioForm">
     <div class="flex-container-form mx-auto">
         <div class="form">
             <div class="form-group mx-auto">
@@ -50,8 +50,9 @@
 
             <button type="button"
                     class="btn btn-info mb-3"
+                    (click)="ejecutarAccion()"
             >
-                Guardar
+                {{esCrear ? 'Guardar' : 'Actualizar'}}
             </button>
         </div>
 
