--- a/src/app/feature/propietario/components/propietario/propietario.component.css
+++ b/src/app/feature/propietario/components/propietario/propietario.component.css
@@ -14,7 +14,7 @@ table{
 
 th, td {
     text-align: left;
-    padding: 8px;
+    padding-left: 8px;
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
@@ -23,41 +23,44 @@ tr:nth-child(even){background-color: #f2f2f2}
 /*mobile*/
 @media 
 only screen and 
-    (max-width: 760px){
-        td, tr { 
-            display: block; 
-        }
-        
-        /* Hide table headers (but not display: none;, for accessibility) */
-        thead tr { 
-            position: absolute;
-            top: -9999px;
-            left: -9999px;
-        }
-        tr {
-            border: 1px solid #DDD; 
-        }
-        tr + tr{
-            margin-top: 1.5em;
-        }
-        td { 
-            /* make like a "row" */
-            border: none;
-            border-bottom: 1px solid #eee; 
-            position: relative;
-            padding-left: 50%; 
-            background-color: #fff;
-            text-align: left; 
-        }
-        td:before { 
-            content: attr(data-label);
-            display: inline-block;
-            line-height: 1.5;
-            margin-left: -100%;
-            width: 100%;
-            white-space: nowrap;
-            font-weight: bold;
-        }
-
-        
+(max-width: 760px){
+    td, tr { 
+        display: block; 
     }
+    
+    /* Hide table headers (but not display: none;, for accessibility) */
+    thead tr { 
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+    tr {
+        border: 1px solid #DDD; 
+    }
+    tr + tr{
+        margin-top: 1.5em;
+    }
+    td { 
+        /* make like a "row" */
+        border: none;
+        border-bottom: 1px solid #eee; 
+        position: relative;
+        padding-left: 50%; 
+        background-color: #fff;
+        text-align: left; 
+    }
+    td:before { 
+        content: attr(data-label);
+        display: inline-block;
+        line-height: 1.5;
+        margin-left: -100%;
+        width: 100%;
+        white-space: nowrap;
+        font-weight: bold;
+    }
+}
+
+.kb-pagination{
+    display: flex;
+    justify-content: flex-end;
+}
